@@ -5,8 +5,9 @@ lib/WWW/Kickstarter.pm
 lib/WWW/Kickstarter/Data.pm
 lib/WWW/Kickstarter/Data/Categories.pm
 lib/WWW/Kickstarter/Data/Category.pm
-lib/WWW/Kickstarter/Data/Project.pm
+lib/WWW/Kickstarter/Data/Location.pm
 lib/WWW/Kickstarter/Data/NotificationPref.pm
+lib/WWW/Kickstarter/Data/Project.pm
 lib/WWW/Kickstarter/Data/Reward.pm
 lib/WWW/Kickstarter/Data/User.pm
 lib/WWW/Kickstarter/Data/User/Myself.pm
