@@ -24,6 +24,7 @@ sub _new {
    my $self = $class->SUPER::_new($ks, $data);
    $self->{creator } = WWW::Kickstarter::Data::User    ->_new($ks, $self->{creator }) if exists($self->{creator });
    $self->{category} = WWW::Kickstarter::Data::Category->_new($ks, $self->{category}) if exists($self->{category});
+   $self->{location} = WWW::Kickstarter::Data::Location->_new($ks, $self->{location}) if exists($self->{location});
 
    if (exists($self->{rewards})) {
       for my $reward (@{ $self->{rewards} }) {
@@ -43,17 +44,16 @@ sub blurb         { $_[0]{blurb} }
 sub launched_at   { $_[0]{launched_at} }    # When project started
 sub deadline      { $_[0]{deadline} }       # When project ends
 sub backers_count { $_[0]{backers_count} }
+sub currency      { $_[0]{currency} }
 sub goal          { $_[0]{goal} }
 sub pledged       { $_[0]{pledged} }
-sub currency      { $_[0]{currency} }
+sub progress      { $_[0]{pledged} / $_[0]{goal} }
+sub progress_pct  { int( $_[0]{pledged} / $_[0]{goal} * 100 ) }
 sub creator       { $_[0]{creator} }
-
+sub location      { $_[0]{location} }
 sub category      { $_[0]{category} }
 sub category_id   { $_[0]{category}{id} }
 sub category_name { $_[0]{category}{name} }
-
-sub progress      { $_[0]{pledged} / $_[0]{goal} }
-sub progress_pct  { int( $_[0]{pledged} / $_[0]{goal} * 100 ) }
 
 
 sub refetch { my $self = shift;  return $self->ks->project($self->id, @_); }
@@ -150,6 +150,13 @@ Returns the epoch timestamp (as returned by L<C<time>|perlfunc/time>) of the pro
 Returns the number of backers the project has.
 
 
+=head2 currency
+
+   my $currency = $project->currency;
+
+Returns the currency used for this project's goal, its pledges and its rewards.
+
+
 =head2 goal
 
    my $project_goal = $project->goal;
@@ -164,11 +171,18 @@ Returns the amount the project is attempting to raise. The amount is in the curr
 Returns the amount that has been pledged to the project. The amount is in the currency returned by L<C<currency>|/currency>.
 
 
-=head2 currency
+=head2 progress
 
-   my $currency = $project->currency;
+   my $project_progress = $project->progress;
 
-Returns the currency used for this project's goal, its pledges and its rewards.
+Returns the progress towards the project's goal. For example, a value greater than or equal to 1.00 indicates the goal was reached.
+
+
+=head2 progress_pct
+
+   my $project_progress_pct = $project->progress_pct;
+
+Returns the progress towards the project's goal as a percent. For example, a value greater than or equal to 100 indicates the goal was reached
 
 
 =head2 creator
@@ -178,6 +192,13 @@ Returns the currency used for this project's goal, its pledges and its rewards.
 Returns the creator of the project as an L<WWW::Kickstarter::Data::User> object.
 
 Some data will not available without a refetch.
+
+
+=head2 location
+
+   my $location = $project->location;
+
+Returns the location of the project as an L<WWW::Kickstarter::Data::Location> object.
 
 
 =head2 category
@@ -203,20 +224,6 @@ B<Deprecated>: Use C<< $project->category->id >> instead.
 Returns the name of the category of the project.
 
 B<Deprecated>: Use C<< $project->category->name >> instead.
-
-
-=head2 progress
-
-   my $project_progress = $project->progress;
-
-Returns the progress towards the project's goal. For example, a value greater than or equal to 1.00 indicates the goal was reached.
-
-
-=head2 progress_pct
-
-   my $project_progress_pct = $project->progress_pct;
-
-Returns the progress towards the project's goal as a percent. For example, a value greater than or equal to 100 indicates the goal was reached
 
 
 =head1 API CALLS
